--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -139,23 +139,50 @@
   margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
-  padding: 0.7rem;
-  .class-coverage p{
-    margin:0px;
+  padding: 1rem;
+  
+  .class-coverage-arrow {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    .class-coverage-arrow:hover{
+      .class-coverag p{
+        font-weight: bold;
+      }
+    }
+
+    p{
+      margin: 0rem;
+      margin-right: 0.5rem;
+      font-weight: 500;
+    }
+  }
+  
+  .class-coverage{
+    margin-top: 1rem;
+  }
+
+  .class-coverage p {
+    margin: 0px;
     margin-left: 0.5rem;
     margin-bottom: 0.5rem;
   }
-  .converage-desc{
+
+  .converage-desc {
     margin: 0rem;
     margin-left: 0.5rem;
-    b{
-        color: #5E54AC;
-        font-size: 22px;
+
+    b {
+      color: #5E54AC;
+      font-size: 22px;
     }
-    i{
-        color: #646263a3;
+
+    i {
+      color: #646263a3;
     }
-}
+  }
+
   .wraper {
     width: 100%;
     display: flex;
@@ -166,10 +193,10 @@
 
   .active-bookings-numbers {
     width: 50px;
-    height: auto;
+    height: 60px;
     border-right: 1px solid #646263;
     color: $darkGreyWriting;
-    padding: 0 5px 0 0;
+    padding: 0 0.8rem 0 0;;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -177,10 +204,11 @@
     p:first-child {
       font-size: 18px;
       margin: 0;
+      font-weight: 300;
     }
 
     p:last-child {
-      font-size: 13px;
+      font-size: 15px;
       margin: 0;
     }
   }
@@ -242,9 +270,6 @@
     margin: 0;
   }
 
-  p:first-child {
-    font-size: 16px;
-  }
 }
 
 .client-subscriptions {
