adds link for week schedule cards, react toastift notification, class coverage bugs fix

--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -17,6 +17,11 @@
 }
 
 .week-schedule.page {
+    .zoom-link-dialog{
+        display: flex;
+        flex-direction: column;
+    }
+    
     .day-schedule-cards {
         display: flex;
         justify-content: space-evenly;
