--- a/public/styles/components/_header.scss
+++ b/public/styles/components/_header.scss
@@ -1,4 +1,7 @@
 header {
+    z-index: 3;
+    position: relative;
+
     nav {
         display: flex;
         justify-content: space-between;
@@ -10,19 +13,21 @@ header {
         border-bottom-left-radius: 7px;
         border-bottom-right-radius: 7px;
         margin-bottom: 2rem;
-
-        .small-menu{
+        
+        .small-menu {
             display: flex;
             align-items: center;
             width: 100%;
             justify-content: space-between;
         }
 
-        .fa-bars{
+        .fa-bars {
             display: none;
         }
-        
+
         ul {
+            width: 1500px;
+            justify-content: space-between;
             display: flex;
             align-items: center;
 
@@ -126,6 +131,6 @@ header {
 
     .navItem {
         display: inline-block;
-        margin-right: 3.5rem;
+       /*  margin-right: 3.5rem; */
     }
 }
