--- a/public/styles/components/_dayScheduleCard.scss
+++ b/public/styles/components/_dayScheduleCard.scss
@@ -1,9 +1,31 @@
+.day-schedule-cards.bookings{
+    flex-direction: column;
+    .icon-chevron{
+        margin-left: 1.5rem;
+    }
+    .class.radio {
+        p {
+            margin: 0px;
+        }
+    }
+}
+
 .day-schedule-cards {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 
-    .closed-sign{
+    .class.radio {
+        p {
+            margin-bottom: 0px;
+        }
+
+        border-left-style: solid;
+        border-width: thin;
+        padding-left: 1rem;
+    }
+
+    .closed-sign {
         display: flex;
         justify-content: center;
         margin: 2rem;
@@ -19,23 +41,38 @@
             height: fit-content;
             margin-left: 1.5rem;
         }
-        .info-wraper{
+
+        .buttons-container {
+            display: flex;
+            flex-direction: column;
+
+            button {
+                margin-bottom: 0.2rem;
+            }
+        }
+
+        .info-wraper {
             display: flex;
             align-items: center;
         }
+
+        .fa-info-circle:hover {
+            color: #6CBBC7 !important;
+        }
+
         .info {
-            p{
+            p {
                 margin-bottom: 0.2rem;
             }
-            span{
+
+            span {
                 font-size: 14px;
             }
-            border-right-style: solid;
-            border-right-width: thin;
-            /* padding: 0rem 0.5rem; */
-            padding-right: 1rem;
-            margin-right: 1rem;
+
             min-width: 57px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     }
 }
@@ -49,6 +86,10 @@
     width: fit-content;
     width: 400px;
     margin: 1rem 0rem;
+
+    hr{
+        margin: 2rem 0.5rem;
+    }
 
     img {
         width: 60px;
@@ -65,5 +106,41 @@
         font-weight: 400;
         font-size: 30px;
         margin: 1rem 0rem;
+    }
+}
+
+.dialog-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 300px;
+}
+
+.admin-classes-layout {
+    .day-schedule-cards {
+        .class.radio {
+            border-left-style: none
+        }
+
+        .class.wraper .info {
+            border-right-style: solid;
+            border-width: thin;
+            min-width: 70px;
+            padding-right: 1rem;
+
+            p {
+                font-weight: 300;
+                margin-top: 0rem;
+                margin-bottom: 0.5rem;
+            }
+            span{
+                align-self: flex-end;
+            }
+            b {
+                align-self: flex-end;
+                font-size: 13px;
+                color: #78999f;
+            }
+        }
     }
 }
