--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -1,7 +1,48 @@
-.date-container{
+.date-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap-reverse;    
+    flex-wrap: wrap-reverse;
     height: fit-content;
+    min-height: 750px;
+    margin-bottom: 30px;
+
+    .wrapper {
+        display: flex;
+        align-items: flex-start;
+        width: 800px;
+        justify-content: space-between;
+        flex-wrap: wrap-reverse;
+    }
+}
+
+.week-schedule.page {
+    .day-schedule-cards {
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
+.dateRange {
+    box-shadow: 0px 3px 4px 0px rgb(0 0 0 / 25%);
+    border-radius: 0.5rem;
+}
+
+.week_schedule-form{
+    display: flex;
+    flex-direction: row;
+    margin: 1rem;
+    align-items: center;
+    background-color: #EDECF4;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 1rem;
+    flex-wrap: wrap;
+    box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+    min-width: 400px;
+
+    .button-white{
+        margin-left: 2rem;
+        box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
+    }
 }
