--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1002,7 +1002,6 @@ header .navItem {
   }
 
   .client-info {
-    width: 740px;
     align-self: center;
     margin: 40px 0 0 0;
   }
@@ -1026,23 +1025,16 @@ header .navItem {
 
   header nav {
     padding: 2rem 1rem;
-    flex-direction: column;
-  }
-  header nav .fa-bars {
-    display: flex;
+    flex-wrap: wrap;
   }
   header nav .navItems {
-    display: flex;
     flex-direction: column;
-    background-color: white;
-    width: fit-content;
-    justify-content: center;
+    width: 100%;
   }
-  header nav .navItem {
-    margin: 0rem !important;
-    padding: 1rem !important;
+  header nav .navItems .navItem {
+    padding: 1rem;
   }
-  header nav .hamburger {
+  header nav .fa-bars {
     display: flex;
   }
 }
@@ -1057,36 +1049,6 @@ header .navItem {
     width: fit-content;
   }
 
-  .bellowChart {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: center;
-  }
-  .bellowChart h3 {
-    align-self: center;
-  }
-
-  .client-active-booking {
-    align-self: center;
-    width: 100%;
-    justify-content: center;
-  }
-
-  .client-last-booking {
-    align-self: center;
-    width: 100%;
-  }
-
-  .active-booking-card {
-    align-self: center;
-  }
-
-  .adminsubsection {
-    justify-content: space-between;
-  }
-
   .day-schedule.card {
     width: 430px;
   }
@@ -1099,7 +1061,7 @@ header .navItem {
   }
 }
 @media (max-width: 470px) {
-  day-schedule.card {
+  .day-schedule.card {
     width: 100%;
   }
 
@@ -1157,6 +1119,12 @@ header .navItem {
     width: 100%;
     text-align: center;
     margin: 0px;
+  }
+}
+@media (max-width: 350px) {
+  .date-container {
+    min-height: fit-content;
+    margin: 2rem 0rem;
   }
 }
 @media (max-width: 350px) {
